--- a/src/lithium/doc/lithium15.tex
+++ b/src/lithium/doc/lithium15.tex
@@ -252,7 +252,7 @@ then we get the \underline{three} coupled equations
 \boxed{
 \left\lbrace
 	\begin{array}{rcl}
-		\partial_t\alpha    & = & \Upsilon_0 h - \alpha\left\lbrack k_h+\Upsilon_0 h +{\sum_x k_x^q \Li{x}} \right\rbrack\\
+		\partial_t\alpha & = & \Upsilon_0 h - \alpha\left\lbrack k_h+\Upsilon_0 h +{\sum_x k_x^q \Li{x}} \right\rbrack\\
 		\partial_t\Li{x} & = & \left\lbrack k_x\tilde{\Theta}_x+\Upsilon_x h  E_0\right\rbrack
 		-\left\lbrack
 			\Upsilon_x h  E_0\alpha +  \Li{x}  \left(k_x + k_x^q E_0\alpha\right)
@@ -261,6 +261,18 @@ then we get the \underline{three} coupled equations
 \right.
 }
 \end{equation}
+
+\begin{equation}
+\boxed{
+\left\lbrace
+	\begin{array}{rcl}
+		\partial_t\alpha & = & -k_h + \left(1- \alpha\right)\left\lbrack k_h+\Upsilon_0 h\right] - \alpha \left\lbrack {\sum_x k_x^q \Li{x}} \right\rbrack\\
+		\partial_t\Li{x} & = & k_x \left(\tilde{\Theta}_x -\Li{x} \right)  + \left(1-\alpha\right) \Upsilon_x h  E_0 - \alpha E_0 k_x^q \Li{x}\\
+	\end{array}
+\right.
+}
+\end{equation}
+
 
 \subsection{Looking for steady-state}
 \subsubsection{Constraints}
@@ -300,20 +312,20 @@ which read exactly as the GHK level (electroosmotic leaks) shifted by NHE intake
 OK, I computed them, $\alpha_\infty$ is $\alpha_0$ with a slight decrease if $\bar{q}$ increases...
 For many reasons, let's assume $\bar{q}E_0\ll 1$, and see if a correction is necessary
 
-%\subsection{Unified rewrite}
-%\begin{equation}
-%\boxed{
-%\left\lbrace
-%	\begin{array}{rcl}
-%		\partial_t\alpha    & = & \Upsilon_0 h - \alpha\left\lbrack k_h+\Upsilon_0 h + \bar{q} {\sum_x k_x \Li{x}} \right\rbrack\\
-%		\partial_t\Li{x} & = & \left\lbrack k_x\tilde{\Theta}_x+\Upsilon_x h  E_0\right\rbrack
-%		-\left\lbrack
-%			\Upsilon_x h  E_0\alpha +  \Li{x}  \left(k_x + k_x^q E_0\alpha\right)
-%		\right\rbrack\\
-%	\end{array}
-%\right.
-%}
-%\end{equation}
+\subsection{Unified rewrite}
+\begin{equation}
+\boxed{
+\left\lbrace
+	\begin{array}{rcl}
+		\partial_t\alpha    & = & \Upsilon_0 h - \alpha\left\lbrack k_h+\Upsilon_0 h + \bar{q} {\sum_x k_x \Li{x}} \right\rbrack\\
+		\partial_t\Li{x} & = & \left\lbrack k_x\tilde{\Theta}_x+\Upsilon_x h  E_0\right\rbrack
+		-\left\lbrack
+			\Upsilon_x h  E_0\alpha +  \Li{x}  \left(k_x + k_x^q E_0\alpha\right)
+		\right\rbrack\\
+	\end{array}
+\right.
+}
+\end{equation}
 
 
 
