will approximate alpha...

--- a/src/lithium/doc/lithium15.tex
+++ b/src/lithium/doc/lithium15.tex
@@ -328,7 +328,7 @@ For many reasons, let's assume $\bar{q}E_0\ll 1$, and see if a correction is nec
 		\partial_t\Li{x} & = & k_x \left[
 		\left(\Theta \LiOut{x} - \Li{x} \right)
 		+ \left(1-\alpha\right) h E_0 \dfrac{\bar{p}^2}{\tilde{D}} \LiOut{x} 
-		+ \alpha E_0 \bar{q} \Li{x}
+		- \alpha E_0 \bar{q} \Li{x}
 		\right]
 		\\
 	\end{array}
