--- a/src/lithium/doc/lithium15.tex
+++ b/src/lithium/doc/lithium15.tex
@@ -69,25 +69,29 @@ $$
 $$
 
 \begin{equation}
+\left\lbrace
 \begin{array}{rcl}
 	\LiAll    & = & \Li{6} + \Li{7}\\
 	\LiAllOut & = & \LiOut{6} + \LiOut{7}\\
 \end{array}
+\right.
 \end{equation}
 and
 \begin{equation}
+\left\lbrace
 \begin{array}{rclcl}
 	\Li{6} & = & \dfrac{1}{1+\beta_s \left[1+10^{-3}\deltaLi\right] } \LiAll & = & \epsilon_6 \LiAll  = \epsilon \LiAll \\
 	\\
 	\Li{7} & = & \dfrac{\beta_s \left[1+10^{-3}\deltaLi\right]}{1+\beta_s \left[1+10^{-3}\deltaLi\right] }  & = & \epsilon_7 \LiAll,\;\epsilon_7 = 1-\epsilon \\
 \end{array}
+\right.
 \end{equation}
 with, for the experiments,
 \begin{equation}
 	\beta_s = 12.0192
 \end{equation}
 \begin{equation}
-	\epsilon \simeq 0.076, 1-\epsilon \simeq 0.924
+	\epsilon^\mathrm{out} \simeq 0.076, 1-\epsilon^\mathrm{out} \simeq 0.924
 \end{equation}
 
 \section{Proposed Mechanism}
@@ -237,61 +241,17 @@ so that
 \begin{equation}
 	p_x = k_x^p \proton  \tilde{J}_x \dfrac{E_0-\EHin}{\tilde{D}}
 \end{equation}
-We now use
-\begin{equation}
-	\begin{array}{rcl}
-	\alpha    & = &\dfrac{\EHin}{E_0}\\
-	%\lambda_x & = & \LiIn{x}\\
-	\end{array}
-\end{equation}
-and we get
-\begin{equation}
-	\left\lbrace
-	\begin{array}{rcl}
-	v_h & = & k_h E_0 \alpha \\
-	q_x & = & k_x^q E_0 \alpha \Li{x}  \\
-	l_x & = & k_x \left(\Li{x} - \tilde{\Theta}_x\right)\\
-	p_x & = & \underbrace{k_x^p  \dfrac{\tilde{J}_x}{\tilde{D}}}_{\Upsilon_x} E_0 \proton(1-\alpha) \\
-	\Upsilon_0 & = & \Upsilon_6 + \Upsilon_7 \;\;\left(\text{ in M$^{-1}$.s$^{-1}$}\right) \\
-	\end{array}
-\right.
-\end{equation}
 
-
-%We define the set of reduced constants
-%\begin{equation}
-%\left\lbrace
-%	\begin{array}{rcl}
-%	\omega_x & = &  k_x^p \proton \dfrac{J_x}{\tilde{D}}\LiOut{x}\\
-%	\omega_0 & = & \omega_6 + \omega_7\\
-%	p_x & = & \omega_x E_0 \left(1-\alpha\right)\\
-%	\end{array}
-%\right.
-%\end{equation}
-%
-
-
-then we get the \underline{three} coupled equations (TODO: not using $\Upsilon...$)
-%\begin{equation}
-%\boxed{
-%\left\lbrace
-%	\begin{array}{rcl}
-%		\partial_t\alpha & = & \Upsilon_0 h - \alpha\left\lbrack k_h+\Upsilon_0 h +{\sum_x k_x^q \Li{x}} \right\rbrack\\
-%		\partial_t\Li{x} & = & \left\lbrack k_x\tilde{\Theta}_x+\Upsilon_x h  E_0\right\rbrack
-%		-\left\lbrack
-%			\Upsilon_x h  E_0\alpha +  \Li{x}  \left(k_x + k_x^q E_0\alpha\right)
-%		\right\rbrack\\
-%	\end{array}
-%\right.
-%}
-%\end{equation}
+then we get the \underline{three} coupled equations  
 
 \begin{equation}
 \boxed{
 \left\lbrace
 	\begin{array}{rcl}
-		\partial_t\alpha & = & -k_h + \left(1- \alpha\right)\left\lbrack k_h+\Upsilon_0 h\right] - \alpha \left\lbrack {\sum_x k_x^q \Li{x}} \right\rbrack\\
-		\partial_t\Li{x} & = & k_x \left(\tilde{\Theta}_x -\Li{x} \right)  + \left(1-\alpha\right) \Upsilon_x h  E_0 - \alpha E_0 k_x^q \Li{x}\\
+		\partial_t\EHin & = & 
+		-k_h E_0+ \left(E_0- \EHin\right)\left\lbrack k_h+ \dfrac{\proton}{\tilde{D}} \left(\sum_x k_x^p \tilde{J}_x \right)\right] 
+		- \EHin \left\lbrack {\sum_x k_x^q \Li{x}} \right\rbrack\\
+		\partial_t\Li{x} & = & k_x \left(\tilde{\Theta}_x -\Li{x} \right)  + \left(E_0-\EHin\right) \dfrac{\proton}{\tilde{D}}   k_x^p \tilde{J}_x  - \EHin k_x^q \Li{x}\\
 	\end{array}
 \right.
 }
@@ -299,9 +259,11 @@ then we get the \underline{three} coupled equations (TODO: not using $\Upsilon..
 
 
 \subsection{Looking for steady-state}
-\subsubsection{Constraints}
+We assume that there exists $\EHin_\infty$, then
 \begin{equation}
-	\Li{x}_\infty = \dfrac{\left\lbrack k_x\tilde{\Theta}_x+\Upsilon_x h_\infty E_0 \left(1-\alpha_\infty\right)\right\rbrack}{k_x+ k_x^q E_0\alpha_\infty}
+	\Li{x}_\infty = 
+	\dfrac{\left\lbrack k_x\tilde{\Theta}_x+ \dfrac{k_x^p \tilde{J}_x}{\tilde{D}} h_\infty\left(E_0-\EHin_\infty\right)\right\rbrack}
+	{k_x+ k_x^q \EHin_\infty}
 \end{equation}
 Since experimentally, there exist ${\beta}$ (observed) and $\Theta$ (GHK) such that
 \begin{equation}
@@ -309,7 +271,8 @@ Since experimentally, there exist ${\beta}$ (observed) and $\Theta$ (GHK) such t
 \end{equation}
 we obtain that
 \begin{equation}
-		\beta = \dfrac{k_x\Theta + k_x^p h_\infty {J_x} E_0 (1-\alpha_\infty)/\tilde{D}}{k_x+ k_q^x E_0\alpha_\infty}
+		\beta = \dfrac{\left\lbrack k_x{\Theta}_x+ \dfrac{k_x^p {J}_x}{\tilde{D}} h_\infty\left(E_0-\EHin_\infty\right)\right\rbrack}
+	{k_x+ k_x^q \EHin_\infty}
 \end{equation}
 \textit{which must be the same for both species!}
 
@@ -325,44 +288,100 @@ We have
 leading to
 \begin{equation}
 	\label{steady_beta}
-	\beta = \dfrac{\Theta+\dfrac{\bar{p}^2 h_\infty E_0}{1+J_6\LiOut{6}+J_7\LiOut{7}} \left(1-\alpha_\infty\right)}{1+\bar{q}E_0\alpha_\infty}
+	\beta = \dfrac{\Theta+\dfrac{\bar{p}^2 h_\infty }{1+J_6\LiOut{6}+J_7\LiOut{7}} \left(E_0-\EHin_\infty\right)}{1+\bar{q}\EHin_\infty}
 \end{equation}
 which read exactly as the GHK level (electroosmotic leaks) shifted by NHE intake and reduced by NHE output.
 
 \centerline{\bf This has some meaning: leak modulated isotopic separation!!!}
 
 
-\subsubsection{Expression}
-OK, I computed them, $\alpha_\infty$ is $\alpha_0$ with a slight decrease if $\bar{q}$ increases...\\
-For many reasons, let's assume $\bar{q}E_0\ll 1$, and see if a correction is necessary ??
 
 \subsection{Unified rewrite}
-\begin{equation}
-\begin{array}{rcl}
-	%\Upsilon_x & = & \bar{p}^2 k_x \dfrac{\LiOut{x}}{\tilde{D}}\\
-	\beta_x    & = & \dfrac{\Li{x}}{\LiOut{x}}\\
-\end{array}
-\end{equation}
 
 \begin{equation}
 \boxed{
 \left\lbrace
 	\begin{array}{rcl}
-		\partial_t\alpha    & = & 
-		-k_h 
-		+ \left(1-\alpha\right) \left[ k_h + h \dfrac{\bar{p}^2}{\tilde{D}} \left(\sum_x k_x \LiOut{x}\right) \right]
-		- \alpha \bar{q} \left( {\sum_x k_x \Li{x}} \right)\\
-		\partial_t\beta_x & = & k_x \left[
-		\left(\Theta  - \beta_x \right)
-		+ \left(1-\alpha\right) h E_0 \dfrac{\bar{p}^2}{\tilde{D}} 
-		- \alpha E_0 \bar{q} \beta_x
-		\right]
-		\\
+		\partial_t\EHin & = & 
+		-k_h E_0
+		+ \left(E_0- \EHin\right)\left\lbrack k_h+ \dfrac{\bar{p}^2\proton}{\tilde{D}} \left(\sum_x k_x \LiOut{x} \right)\right] 
+		- \bar{q}\EHin \left( {\sum_x k_x \Li{x}} \right)\\
+		\partial_t\Li{x} & = & k_x \left({\Theta}_x\LiOut{x} -\Li{x} \right) 
+		 + k_x \left(E_0-\EHin\right) \dfrac{\proton}{\tilde{D}} {J}_x \LiOut{x}  -  \bar{q}\EHin k_x \Li{x}\\
 	\end{array}
 \right.
 }
 \end{equation}
 
+
+\begin{equation}
+\begin{array}{rcl}
+	\beta_x    & = & \dfrac{\Li{x}}{\LiOut{x}}\\
+\end{array}
+\end{equation}
+
+%\begin{equation}
+%%\boxed{
+%\left\lbrace
+%	\begin{array}{rcl}
+%		\partial_t\alpha    & = & 
+%		-k_h 
+%		+ \left(1-\alpha\right) \left[ k_h + \proton \dfrac{\bar{p}^2}{\tilde{D}} \left(\sum_x k_x \LiOut{x}\right) \right]
+%		- \alpha \bar{q} \left( {\sum_x k_x \Li{x}} \right)\\
+%		\partial_t\beta_x & = & k_x \left[
+%		\left(\Theta  - \beta_x \right)
+%		+ \left(1-\alpha\right) \proton E_0 \dfrac{\bar{p}^2}{\tilde{D}} 
+%		- \alpha E_0 \bar{q} \beta_x
+%		\right]
+%		\\
+%	\end{array}
+%\right.
+%%}
+%\end{equation}
+%then
+%\begin{equation}
+%%\boxed{
+%\left\lbrace
+%	\begin{array}{rcl}
+%	\partial_t \alpha & = & 
+%	-k_h 
+%	+ \left(1-\alpha\right) \left[ k_h + \bar{p}^2\proton \dfrac{\left(\sum_x k_x\epsilon_x\right)\LiAllOut}{1+\left(\sum_xJ_x\epsilon_x\right)\LiAllOut}\right] - \alpha \bar{q} \LiAllOut \left[ \sum_x \left(k_x \epsilon_x\right) \beta_x \right] \\
+%	\\
+%	\partial_t \beta_x & = &k_x \left[
+%		\left(\Theta  - \beta_x \right)
+%		+ \left(1-\alpha\right) \bar{p}^2 \proton  \dfrac{E_0}{1+\left(\sum_xJ_x\epsilon_x\right)\LiAllOut} 
+%		- \alpha E_0 \bar{q} \beta_x
+%		\right] \\
+%	\end{array}
+%\right.
+%\end{equation}
+%or using
+%\begin{equation}
+%	\hat{\alpha} = 1 - \alpha
+%\end{equation}
+%
+%\begin{equation}
+%\boxed{
+%\left\lbrace
+%	\begin{array}{rcl}
+%	\partial_t \hat\alpha & = & 
+%	k_h 
+%	- \hat\alpha \left[ k_h + \bar{p}^2\proton \dfrac{\left(\sum_x k_x\epsilon_x\right)\LiAllOut}{1+\left(\sum_xJ_x\epsilon_x\right)\LiAllOut}\right] + \left(1-\hat\alpha\right) \bar{q} \LiAllOut \left[ \sum_x \left(k_x \epsilon_x\right) \beta_x \right] \\
+%	\\
+%	\partial_t \beta_x & = &k_x \left[
+%		\left(\Theta  - \beta_x \right)
+%		+  \hat\alpha \bar{p}^2 \proton  \dfrac{E_0}{1+\left(\sum_xJ_x\epsilon_x\right)\LiAllOut} 
+%		- \left(1-\hat\alpha\right) E_0 \bar{q} \beta_x
+%		\right] \\
+%	\end{array}
+%\right.
+%}
+%\end{equation}
+
+
+\subsection{Expression}
+OK, I computed them, $\alpha_\infty$ is $\alpha_0$ with a slight decrease if $\bar{q}$ increases...\\
+For many reasons, let's assume $\bar{q}E_0\ll 1$, and see if a correction is necessary ??
 
 
 \section{First Order Resolution}
