--- a/src/lithium/doc/lithium15.tex
+++ b/src/lithium/doc/lithium15.tex
@@ -438,7 +438,50 @@ so that
 \end{array}
 \right.
 \end{equation}
-
+We define
+\begin{equation}
+\left\lbrace
+\begin{array}{rcl}
+	k_6 & = & \sigma k_7 \\
+	\omega_0 & = & \Omega k_7\\
+	\tau & = & k_7 t \\
+\end{array}
+\right.
+\end{equation}
+to obtain
+\begin{equation}
+\left\lbrace
+\begin{array}{rcl}
+	\beta_7 & = & 
+	\left[\Theta + \Upsilon_\beta h_0 \hat\alpha_\infty \right] \left[1-e^{-\tau}\right] 
+	+
+	\Upsilon_\beta h_0 \left(1-\hat\alpha_\infty\right) \left[ \dfrac{e^{-\Omega\tau} - e^{-\tau}}{1-\Omega}\right]
+	\\
+	\\
+	\beta_7 & = & 
+	\left[\Theta + \Upsilon_\beta h_0 \hat\alpha_\infty \right] \left[1-e^{-\sigma\tau}\right] 
+	+
+	\Upsilon_\beta h_0 \left(1-\hat\alpha_\infty\right)
+	\left[  \dfrac{e^{-\frac{\Omega}{\sigma} \sigma \tau } - e^{-\sigma\tau}}{1-\frac{\Omega}{\sigma}}\right]
+	\\
+\end{array}
+\right.
+\end{equation}
+Using the bump function
+\begin{equation}
+	B(\lambda,u) = \dfrac{e^{-\lambda u}-e^{-u}}{1-\lambda}
+\end{equation}
+we end up with
+\begin{equation}
+	\dfrac{\beta_7}{\beta_6} = 
+	\dfrac{\left[1-e^{-\tau}\right] + \varphi B(\Omega,\tau) }
+	{\left[1-e^{-\sigma\tau}\right] + \varphi B(\frac{\Omega}{\sigma},\sigma\tau)}
+\end{equation}
+with
+\begin{equation}
+	\varphi = \dfrac{\Upsilon_\beta h_0 \left(1-\hat\alpha_\infty\right)}{\Theta+\Upsilon_\beta h_0 \hat\alpha_\infty}
+	,\;\; \hat\alpha_\infty = \dfrac{k_h}{k_h+k_\epsilon \Upsilon_\alpha h_0 }
+\end{equation}
 
 \end{document}
 
