--- a/src/lithium/doc/lithium16.tex
+++ b/src/lithium/doc/lithium16.tex
@@ -396,14 +396,31 @@ We get
 \begin{array}{rcl}
 	\hat\alpha(\tau)  & = & \hat\alpha_\infty + \left(1-\hat\alpha_\infty\right) e^{-\Omega \tau}\\
 	\\
-	\beta_{7,0}(\tau) & = & \left( \Theta + \hat\alpha_\infty \star_7 \right)  \left[1-e^{-\tau}\right]
-	+ \left(1-\hat\alpha_\infty\right) \star_7 \left[\dfrac{e^{-\Omega\tau} - e^{-\tau}}{1-\Omega}\right]\\
+	\beta_{7,0}(\tau) & = & \left( \Theta + \hat\alpha_\infty A_7 \right)  \left[1-e^{-\tau}\right]
+	+ \left(1-\hat\alpha_\infty\right) A_7 \left[\dfrac{e^{-\Omega\tau} - e^{-\tau}}{1-\Omega}\right]\\
 	\\
-	\beta_{6,0}(\tau) & = & \left( \Theta + \hat\alpha_\infty \star_6 \right)  \left[1-e^{-\sigma\tau}\right]
-	+ \left(1-\hat\alpha_\infty\right) \star_6 \left[\dfrac{e^{-\frac{\Omega}{\sigma}\sigma\tau} - e^{-\sigma\tau}}{1-\dfrac{\Omega}{\sigma}}\right]\\
+	\beta_{6,0}(\tau) & = & \left( \Theta + \hat\alpha_\infty A_6 \right)  \left[1-e^{-\sigma\tau}\right]
+	+ \left(1-\hat\alpha_\infty\right) A_6 \left[\dfrac{e^{-\frac{\Omega}{\sigma}\sigma\tau} - e^{-\sigma\tau}}{1-\dfrac{\Omega}{\sigma}}\right]\\
 \end{array}
 \right.
 \end{equation}
+
+We find
+\begin{equation}
+\left\lbrace
+\begin{array}{ccl}
+	J_\epsilon & = & \epsilon J_6 + (1-\epsilon) J_7 \\
+	\\
+	A_x & = & \dfrac{h_0\Upsilon_x}{k_x} = \epsilon_x \dfrac{\bar{p}_x^2}{1+J_\epsilon \LiAllOut} h_0 E_0 \\
+	\\
+	h_0\Upsilon_\alpha & = & \dfrac{\left(\sum_x k_x^p \epsilon_x J_x \right)h_0\LiAllOut}{1+J_\epsilon\LiAllOut}
+	 k_7 \dfrac{\left[\sigma \epsilon \bar{p}_6^2 + (1-\epsilon) \bar{p}_7^2 \right] h_0 \LiAllOut }{1+J_\epsilon \LiAllOut}  \\
+	 \\
+	\hat{\alpha}_\infty & = & \cos^2 \phi\\
+\end{array}
+\right.
+\end{equation}
+
 
 \end{document}
 
