--- a/src/lithium/doc/lithium16.tex
+++ b/src/lithium/doc/lithium16.tex
@@ -268,11 +268,18 @@ which can be turned into an \textbf{unified} set of equations using
 	\\
 	\beta_x & = & \dfrac{\Li{x}}{\LiOut{x}}\\
 	\\
-	\Lambda & = & \Li{6} + \Li{7} = \left(\epsilon_6 \beta_6 + \epsilon_7 \beta_7\right) \LiAllOut \\
+	\Lambda & = & \Li{6} + \Li{7} = \left(\epsilon_6 \beta_6 + \epsilon_7 \beta_7\right) \LiAllOut = \left[\epsilon \beta_6 + (1-\epsilon) \beta_7\right] \LiAllOut\\
 \end{array}
 \right.
 \end{equation}
-
+and obviously
+\begin{equation}
+	\deltaLi = 1000 \left ( \left[1+10^{-3}\deltaLiOut\right] \dfrac{\beta_7}{\beta_6}-1\right)
+\end{equation}
+or
+\begin{equation}
+	\dfrac{\beta_7}{\beta_6} = \dfrac{\left[1+10^{-3}\deltaLi\right]}{\left[1+10^{-3}\deltaLiOut\right]}
+\end{equation}
 
 \begin{equation}
 %\boxed{
@@ -411,9 +418,9 @@ We find
 \begin{array}{ccl}
 	J_\epsilon & = & \epsilon J_6 + (1-\epsilon) J_7 \\
 	\\
-	A_x & = & \dfrac{h_0\Upsilon_x}{k_x} = \epsilon_x \dfrac{\bar{p}_x^2}{1+J_\epsilon \LiAllOut} h_0 E_0 \\
+	A_x & = & \dfrac{h_0\Upsilon_x}{k_x} = \dfrac{\dfrac{k_x^p J_x}{k_x} \epsilon_x  E_0 h_0}{1+\left(\sum_x J_x \epsilon_x \right) \LiAllOut} = \epsilon_x \dfrac{\bar{p}_x^2}{1+J_\epsilon \LiAllOut} h_0 E_0 \\
 	\\
-	h_0\Upsilon_\alpha & = & \dfrac{\left(\sum_x k_x^p \epsilon_x J_x \right)h_0\LiAllOut}{1+J_\epsilon\LiAllOut}
+	h_0\Upsilon_\alpha & = & \dfrac{\left(\sum_x k_x^p \epsilon_x J_x \right)h_0\LiAllOut}{1+J_\epsilon\LiAllOut} = 
 	 k_7 \dfrac{\left[\sigma \epsilon \bar{p}_6^2 + (1-\epsilon) \bar{p}_7^2 \right] h_0 \LiAllOut }{1+J_\epsilon \LiAllOut}  \\
 	 \\
 	\hat{\alpha}_\infty & = & \cos^2 \phi\\
@@ -421,6 +428,26 @@ We find
 \right.
 \end{equation}
 
+\subsection{First order Results}
+
+\subsubsection{Passive Separation, valid for any case}
+Without enzyme, and for any outer lithium concentration (even extrapolated to 0)
+\begin{equation}
+	\dfrac{\beta_7^\star}{\beta_6^\star} = \dfrac{  \left[1-e^{-\tau}\right]}{  \left[1-e^{-\sigma\tau}\right]}
+\end{equation}
+
+\subsubsection{Constant $\proton$ for initial times}
+\begin{equation}
+	B(\lambda,\tau) = \dfrac{e^{-\lambda\tau}-e^{-\tau}}{1-\lambda},\;\;B(1,\tau) = \tau e^{-\tau}
+\end{equation}
+
+The first order equation is
+\begin{equation}
+	\dfrac{\beta_{7,0}}{\beta_{6,0}} = 
+	\dfrac
+	{\left( \Theta + A_7\cos^2\phi \right)  \left[1-e^{-\tau}\right]+ A_7B(\Omega,\tau) \sin^2\phi }
+	{\left( \Theta + A_6\cos^2\phi \right)  \left[1-e^{-\tau}\right]+ A_6B(\Omega,\tau) \sin^2\phi }
+\end{equation}
 
 \end{document}
 
