need to understand why...

--- a/src/lithium/doc/lithium16.tex
+++ b/src/lithium/doc/lithium16.tex
@@ -446,7 +446,7 @@ The first order equation is
 	\dfrac{\beta_{7,0}}{\beta_{6,0}} = 
 	\dfrac
 	{\left( \Theta + A_7\cos^2\phi \right)  \left[1-e^{-\tau}\right]+ A_7B(\Omega,\tau) \sin^2\phi }
-	{\left( \Theta + A_6\cos^2\phi \right)  \left[1-e^{-\tau}\right]+ A_6B(\Omega,\tau) \sin^2\phi }
+	{\left( \Theta + A_6\cos^2\phi \right)  \left[1-e^{-\sigma\tau}\right]+ A_6B(\frac{\Omega}{\sigma},\sigma\tau) \sin^2\phi }
 \end{equation}
 
 \end{document}
